# Dairy

./: license.txt  plan.md  pyproject.toml
dairy/: hooks.py
dairy/dairy/custom/: purchase_receipt.json
dairy/dairy/dairy_dashboard/crate_tracking_dashboard/: crate_tracking_dashboard.json
dairy/dairy/doctype/assets_location/: assets_location.js  assets_location.json  assets_location.py  test_assets_location.py
dairy/dairy/doctype/bulk_payment/: bulk_payment.py
dairy/dairy/doctype/crate_balance_adjustment/: crate_balance_adjustment.js  crate_balance_adjustment.json  crate_balance_adjustment.py
dairy/dairy/doctype/crate_delivery/: crate_delivery.js  crate_delivery.json  crate_delivery.py  crate_delivery_dashboard.py  test_crate_delivery.py
dairy/dairy/doctype/crate_settings/: crate_settings.json  crate_settings.py
dairy/dairy/doctype/crate_transit_warehouse_map/: crate_transit_warehouse_map.json  crate_transit_warehouse_map.py
dairy/dairy/doctype/customer_crate_ledger/: customer_crate_ledger.js  (+3 more)
dairy/dairy/fixtures/: dashboard.json  dashboard_chart.json  number_card.json
dairy/fixtures/: custom_field.json
dairy/milk_entry/: custom_delivery_trip.py  custom_sales_invoice.py  custom_sales_order.py  custom_stock_entry.py  custom_work_order.py
dairy/milk_entry/custom/: item.json  milk_entry.json  payment_entry.json  sales_invoice.json  sales_order.json  stock_entry.json  stock_ledger_entry.json  supplier.json  warehouse.json
dairy/public/js/: sales_invoice.js  sales_order.js
dairy/raw_milk_reception_dock/custom/: stock_entry.json
(+79 files in other folders)
