[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dairy"
version = "0.0.1"
description = "Dairy Management System"
authors = [
    { name = "Sanskar Shukla", email = "sanskar19shukla@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "frappe>=16.0.0",
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2"
]

[tool.setuptools]
packages = ["dairy"]

[tool.setuptools.package-data]
dairy = ["**/*"]
